--- a/website/src/index.html
+++ b/website/src/index.html
@@ -144,6 +144,154 @@
                 </a>
             </div>
         </section>
+
+
+        <!-- Popular -->
+        <div class="popular spad" id="popular">
+            <div class="popular-container">
+                <div class="popular-content">
+                    <div class="title">
+                        <h2>Choose Your Electric Car</h2>
+                    </div>
+
+                    <ul class="popular-filters">
+                        <li class="popular-item popular-line">
+                            <h3>All</h3>
+                        </li>
+                        <li class="popular-item popular-line">
+                            <img src="./assets/img/models/cabrio.png">
+                            <h3>Cabrio</h3>
+                        </li>
+                        <li class="popular-item popular-line">
+                            <img src="./assets/img/models/coupe.png">
+                            <h3>Coupe</h3>
+                        </li>
+                        <li class="popular-item popular-line">
+                            <img src="./assets/img/models/sedan.png">
+                            <h3>Sedan</h3>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="popular-data">
+                    <article class="popuplar-card">
+                        <div class="shape shape-small"></div>
+
+                        <h1>Porsche</h1>
+                        <h3>Turbo S</h3>
+
+                        <img src="./assets/img/cars/popular1.png" class="popular-img">
+
+                        <div class="popular-info">
+                            <div class="popular-group">
+                                <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-funds-box-line"></i> 356 Km/h
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-charging-pile-2-line"></i> Eletric
+                            </div>
+                        </div>
+
+                        <h3 class="popular-price">
+                            $175.900
+                        </h3>
+
+                        <button class="button popular-btn">
+                            <i class="ri-arrow-right-down-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popuplar-card">
+                        <div class="shape shape-small"></div>
+
+                        <h1>Porsche</h1>
+                        <h3>Turbo S</h3>
+
+                        <img src="./assets/img/cars/popular1.png" class="popular-img">
+
+                        <div class="popular-info">
+                            <div class="popular-group">
+                                <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-funds-box-line"></i> 356 Km/h
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-charging-pile-2-line"></i> Eletric
+                            </div>
+                        </div>
+
+                        <h3 class="popular-price">
+                            $175.900
+                        </h3>
+
+                        <button class="button popular-btn">
+                            <i class="ri-arrow-right-down-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popuplar-card">
+                        <div class="shape shape-small"></div>
+
+                        <h1>Porsche</h1>
+                        <h3>Turbo S</h3>
+
+                        <img src="./assets/img/cars/popular1.png" class="popular-img">
+
+                        <div class="popular-info">
+                            <div class="popular-group">
+                                <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-funds-box-line"></i> 356 Km/h
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-charging-pile-2-line"></i> Eletric
+                            </div>
+                        </div>
+
+                        <h3 class="popular-price">
+                            $175.900
+                        </h3>
+
+                        <button class="button popular-btn">
+                            <i class="ri-arrow-right-down-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popuplar-card">
+                        <div class="shape shape-small"></div>
+
+                        <h1>Porsche</h1>
+                        <h3>Turbo S</h3>
+
+                        <img src="./assets/img/cars/popular1.png" class="popular-img">
+
+                        <div class="popular-info">
+                            <div class="popular-group">
+                                <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-funds-box-line"></i> 356 Km/h
+                            </div>
+                            <div class="popular-group">
+                                <i class="ri-charging-pile-2-line"></i> Eletric
+                            </div>
+                        </div>
+
+                        <h3 class="popular-price">
+                            $175.900
+                        </h3>
+
+                        <button class="button popular-btn">
+                            <i class="ri-arrow-right-down-line"></i>
+                        </button>
+                    </article>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- Javascripts -->
