Corrigindo card featured

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -145,6 +145,45 @@
             </div>
         </section>
 
+        <section class="featured spad" id="featured">
+            <div class="featured-container">
+                <div>
+                    <div class="featured-card">
+                        <div class="featured-img">
+                            <img src="./assets/img/cars/01.jpg">
+                            <div class="overlay"></div>
+
+                            <div class="featured-score">
+                                <i class="ri-dashboard-2-line"></i>
+                                <h2>8.9</h2>
+                                <span>/10</span>
+                            </div>
+
+                            <h3 class="featured-price">
+                                €378,425.00
+                            </h3>
+                        </div>
+                        <div class="featured-info">
+                            <div class="featured-model">
+                                <img src="./assets/img/models/cabrio.png">
+                                <h3>Cabrio</h3>
+                            </div>
+                            <a href="#">
+                                <h1>Ferrari Portofino</h1>
+                            </a>
+                            <p>
+                                O Ferrari Portofino recorre ao V8 biturbo de 3,9 litros de 600cv.
+                            </p>
+
+                            <button class="btn-link">
+                                Explore <i class="ri-arrow-right-fill"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <!-- Popular -->
         <div class="popular spad" id="popular">
