--- a/website/src/index.html
+++ b/website/src/index.html
@@ -617,24 +617,94 @@
                 <img src="./assets/img/offer-bg.png" class="offer-bg">
 
                 <div class="offer-info">
-                    <div class="title offer-title">
-                        <h2>Do You Want To Receive <br> Special Offers?</h2>
-                    </div>
+                    <h2 class="offer-title">
+                        Do You Want To Receive <br> Special Offers?
+                    </h2>
+
                     <p>
                         Be the first to receive all the information about our
                         products and new cars by email by subscribing to our
                         mailing list.
                     </p>
 
-                    <button class="button">
+                    <a href="#" class="button">
                         Subscribe Now
-                    </button>
+                    </a>
                 </div>
 
                 <img src="./assets/img/offer.png" class="offer-img">
             </div>
         </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer spad">
+        <div class="shape shape-big"></div>
+        <div class="shape shape-small"></div>
+
+        <div class="footer-container">
+            <div class="footer-content">
+                <a href="#" class="logo">
+                    <i class="ri-steering-line"></i>
+                    Carbrand
+                </a>
+
+                <p>
+                    We offer the best electric cars of <br>
+                    the most recognized brands in <br>
+                    the world.
+                </p>
+            </div>
+
+            <div class="footer-content">
+                <h3 class="footer-title">
+                    Company
+                </h3>
+
+                <ul class="footer-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Brand</a></li>
+                    <li><a href="#">Cars</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-content">
+                <h3 class="footer-title">
+                    Information
+                </h3>
+
+                <ul class="footer-links">
+                    <li><a href="#">Request a quote</a></li>
+                    <li><a href="#">Find a dealer</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-content">
+                <h3 class="footer-title">
+                    Follow Us
+                </h3>
+
+                <ul class="footer-social">
+                    <a href="#" target="_blank" class="social-link">
+                        <i class="ri-facebook-fill"></i>
+                    </a>
+                    <a href="#" target="_blank" class="social-link">
+                        <i class="ri-instagram-line"></i>
+                    </a>
+                    <a href="#" target="_blank" class="social-link">
+                        <i class="ri-whatsapp-line"></i>
+                    </a>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-copy">
+            <p>&#169; <a href="#">Aiandra Alves</a>. All rigths reserved | 2022.</p>
+        </div>
+    </footer>
 
     <!-- Javascripts -->
     <script src="./assets/js/swiper-bundle.min.js"></script>
