--- a/website/src/index.html
+++ b/website/src/index.html
@@ -30,7 +30,7 @@
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link active">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#brand" class="nav-link">Brands</a>
@@ -335,7 +335,7 @@
         <!-- Popular -->
         <div class="popular spad" id="popular">
             <div class="swiper popular-container">
-                <div class="title">
+                <div class="title lg:pb-12">
                     <h2>Choose Your Electric Car</h2>
                 </div>
 
@@ -644,7 +644,7 @@
 
         <div class="footer-container">
             <div class="footer-content">
-                <a href="#" class="logo">
+                <a href="#" class="footer-logo">
                     <i class="ri-steering-line"></i>
                     Carbrand
                 </a>
@@ -705,6 +705,11 @@
             <p>&#169; <a href="#">Aiandra Alves</a>. All rigths reserved | 2022.</p>
         </div>
     </footer>
+
+    <!-- ScrollTop -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line"></i>
+    </a>
 
     <!-- Javascripts -->
     <script src="./assets/js/swiper-bundle.min.js"></script>
