Correções no responsivo

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -638,7 +638,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer spad">
+    <footer class="footer">
         <div class="shape shape-big"></div>
         <div class="shape shape-small"></div>
 
